--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                                         <div class="in">
                                             <img src="img/linkedin.svg" alt="">
                                         </div>
-                                    </div>    
+                                    </div>
                                 </div>
                             </div>
                             <div class="our-team__member second member member__top">
@@ -705,7 +705,7 @@
                                         <div class="in">
                                             <img src="img/linkedin.svg" alt="">
                                         </div>
-                                    </div>    
+                                    </div>
                                 </div>
                             </div>
                             <div class="our-team__member third member">
@@ -728,7 +728,7 @@
                                         <div class="in">
                                             <img src="img/linkedin.svg" alt="">
                                         </div>
-                                    </div>    
+                                    </div>
                                 </div>
                             </div>
                             <div class="our-team__member fourth member member__top">
@@ -751,7 +751,7 @@
                                         <div class="in">
                                             <img src="img/linkedin.svg" alt="">
                                         </div>
-                                    </div>    
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -811,7 +811,82 @@
                     </p>
                 </div>
             </div>
-
+            <section class="faq">
+                <div class="faq__blurs blurs">
+                    <div class="blurs__first"></div>
+                    <div class="blurs__second"></div>
+                </div>
+                <div class="container">
+                    <div class="faq__border">
+                        <div class="faq__content">
+                            <div class="faq__head">
+                                <h3 class="faq___subtitle subtitle">
+                                    Questions
+                                </h3>
+                                <h2 class="faq__title title">
+                                    faq
+                                </h2>
+                            </div>
+                            <div class="faq__info">
+                                <div class="faq__question active">
+                                    <div class="question">
+                                        <p>1. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>2. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>3. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>4. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>5. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                                <div class="faq__question">
+                                    <div class="question">
+                                        <p>6. What is CMETA and which tokens we use? </p>
+                                    </div>
+                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
+                                        platform focused on building a decentralized, persistent online 3D/VR
+                                        environment that will allow interactions among humans in the form of Avatars.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
         <footer class="footer">
 
