--- a/index.html
+++ b/index.html
@@ -495,12 +495,18 @@
             </section>
             <section class="game" id="game">
                 <div class="game__logo">
-                    <img src="img/game-logo.png" alt="">
+                    <picture>
+                        <source srcset="img/game-logo.webp" type="webp" />
+                        <img src="img/game-logo.png" alt="game" loading="lazy">
+                    </picture>
                 </div>
                 <div class="container">
                     <div class="game__content">
                         <div class="game__img_one">
-                            <img src="img/game-1.png" alt="">
+                            <picture>
+                                <source srcset="img/game-1.webp" type="webp" />
+                                <img src="img/game-1.png" alt="game-1" loading="lazy">
+                            </picture>
                         </div>
                         <div class="game__info">
                             <div class="game__info_bg"></div>
@@ -529,7 +535,10 @@
                             </div>
                         </div>
                         <div class="game__img_two">
-                            <img src="img/game-2.png" alt="">
+                            <picture>
+                                <source srcset="img/game-2.webp" type="webp" />
+                                <img src="img/game-2.png" alt="game-2" loading="lazy">
+                            </picture>
                         </div>
                     </div>
                 </div>
@@ -594,12 +603,20 @@
                                 </div>
                             </div>
                             <div class="explore__img">
-                                <img src="img/explore-now.png" alt="">
+                                <picture>
+                                    <source srcset="img/explore-now.webp" type="webp" />
+                                    <img src="img/explore-now.png" alt="explore" loading="lazy">
+                                </picture>
                             </div>
                         </div>
                         <div class="virtual">
                             <div class="virtual__img">
-                                <img src="img/virtual-atrs.png" alt="">
+                                <picture>
+                                    <source srcset="img/virtual-atrs.webp" type="webp" />
+                                     <img src="img/virtual-atrs.png">
+                                </picture>
+                               
+
                             </div>
                             <div class="virtual__blur"></div>
                             <div class="virtual__content">
@@ -664,7 +681,12 @@
                         <div class="our-team__all">
                             <div class="our-team__member first member active">
                                 <div class="member__img">
-                                    <img src="img/stan.png" alt="">
+                                    <picture>
+                                        <source srcset="img/stan.webp" type="webp" />
+                                        <img src="img/stan.png" alt="stan" loading="lazy">
+                                    </picture>
+                                    
+
                                 </div>
                                 <div class="member__info">
                                     <p class="member__job">CTO/Creative Director</p>
@@ -687,7 +709,10 @@
                             </div>
                             <div class="our-team__member second member member__top">
                                 <div class="member__img">
-                                    <img src="img/kwasi.png" alt="">
+                                    <picture>
+                                        <source srcset="img/kwasi.webp" type="webp" />
+                                        <img src="img/kwasi.png" alt="kwasi" loading="lazy">
+                                    </picture>
                                 </div>
                                 <div class="member__info">
                                     <p class="member__job">Chief Financial Officer</p>
@@ -710,7 +735,10 @@
                             </div>
                             <div class="our-team__member third member">
                                 <div class="member__img">
-                                    <img src="img/kwame.png" alt="">
+                                    <picture>
+                                        <source srcset="img/kwame.webp" type="webp" />
+                                        <img src="img/kwame.png" alt="kweme" loading="lazy">
+                                    </picture>
                                 </div>
                                 <div class="member__info">
                                     <p class="member__job">COO/Marketing Director</p>
@@ -733,7 +761,10 @@
                             </div>
                             <div class="our-team__member fourth member member__top">
                                 <div class="member__img">
-                                    <img src="img/kojo.png" alt="">
+                                    <picture>
+                                        <source srcset="img/kojo.webp" type="webp" />
+                                        <img src="img/kojo.png" alt="kojo" loading="lazy">
+                                    </picture>
                                 </div>
                                 <div class="member__info">
                                     <p class="member__job">CEO/Developer</p>
@@ -883,6 +914,62 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="social">
+                <div class="social__blurs">
+                    <div class="social__blurs_first"></div>
+                    <div class="social__blurs_second"></div>
+                    <div class="social__blurs_third"></div>
+                </div>
+                <div class="container">
+                    <div class="social__content">
+                        <div class="social__head">
+                            <h3 class="social__subtitle subtitle">
+                                Questions
+                            </h3>
+                            <h2 class="social__title title">
+                                Social media
+                            </h2>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="social__swiper swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="https://twitter.com/">
+                                <picture>
+                                    <source srcset="img/tw.webp" type="webp" />
+                                    <img src="img/tw.png" alt="tw" loading="lazy">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://web.telegram.org/a/">
+                                <picture>
+                                    <source srcset="img/tg.webp" type="webp" />
+                                    <img src="img/tg.png" alt="tg" loading="lazy">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://www.youtube.com/">
+                                <picture>
+                                    <source srcset="img/yt.webp" type="webp" />
+                                    <img src="img/yt.png" alt="yt" loading="lazy">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="https://discord.com/">
+                                <picture>
+                                    <source srcset="img/discord.webp" type="webp" />
+                                    <img src="img/discord.png" alt="ds" loading="lazy">
+                                </picture>
+                            </a>
                         </div>
                     </div>
                 </div>
