--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                             <div class="virtual__img">
                                 <picture>
                                     <source srcset="img/virtual-atrs.webp" type="webp" />
-                                     <img src="img/virtual-atrs.png">
+                                     <img src="img/virtual-atrs.png" loading="lazy">
                                 </picture>
                                
 
@@ -670,7 +670,7 @@
             <section class="our-team" id="team">
                 <div class="our-team__lines"></div>
                 <div class="our-team__dots">
-                    <img src="img/our-team-dots.svg">
+                    <img src="img/our-team-dots.svg" loading="lazy">
                 </div>
                 <div class="container">
                     <div class="our-team__content">
@@ -693,16 +693,16 @@
                                     <p class="member__name">Stan</p>
                                     <div class="member__social">
                                         <div class="facebook">
-                                            <img src="img/facebook.svg" alt="">
+                                            <img src="img/facebook.svg" loading="lazy">
                                         </div>
                                         <div class="twitter">
-                                            <img src="img/twitter.svg" alt="">
+                                            <img src="img/twitter.svg" loading="lazy">
                                         </div>
                                         <div class="inst">
-                                            <img src="img/instagram.svg" alt="">
+                                            <img src="img/instagram.svg" loading="lazy">
                                         </div>
                                         <div class="in">
-                                            <img src="img/linkedin.svg" alt="">
+                                            <img src="img/linkedin.svg" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -719,16 +719,16 @@
                                     <p class="member__name">Kwasi</p>
                                     <div class="member__social">
                                         <div class="facebook">
-                                            <img src="img/facebook.svg" alt="">
+                                            <img src="img/facebook.svg" loading="lazy">
                                         </div>
                                         <div class="twitter">
-                                            <img src="img/twitter.svg" alt="">
+                                            <img src="img/twitter.svg" loading="lazy">
                                         </div>
                                         <div class="inst">
-                                            <img src="img/instagram.svg" alt="">
+                                            <img src="img/instagram.svg" loading="lazy">
                                         </div>
                                         <div class="in">
-                                            <img src="img/linkedin.svg" alt="">
+                                            <img src="img/linkedin.svg" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -745,16 +745,16 @@
                                     <p class="member__name">Kwame</p>
                                     <div class="member__social">
                                         <div class="facebook">
-                                            <img src="img/facebook.svg" alt="">
+                                            <img src="img/facebook.svg" loading="lazy">
                                         </div>
                                         <div class="twitter">
-                                            <img src="img/twitter.svg" alt="">
+                                            <img src="img/twitter.svg" loading="lazy">
                                         </div>
                                         <div class="inst">
-                                            <img src="img/instagram.svg" alt="">
+                                            <img src="img/instagram.svg" loading="lazy">
                                         </div>
                                         <div class="in">
-                                            <img src="img/linkedin.svg" alt="">
+                                            <img src="img/linkedin.svg" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -771,16 +771,16 @@
                                     <p class="member__name">Kojo</p>
                                     <div class="member__social">
                                         <div class="facebook">
-                                            <img src="img/facebook.svg" alt="">
+                                            <img src="img/facebook.svg" loading="lazy">
                                         </div>
                                         <div class="twitter">
-                                            <img src="img/twitter.svg" alt="">
+                                            <img src="img/twitter.svg" loading="lazy">
                                         </div>
                                         <div class="inst">
-                                            <img src="img/instagram.svg" alt="">
+                                            <img src="img/instagram.svg" loading="lazy">
                                         </div>
                                         <div class="in">
-                                            <img src="img/linkedin.svg" alt="">
+                                            <img src="img/linkedin.svg" loading="lazy">
                                         </div>
                                     </div>
                                 </div>
