--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <li class="menu__item"><a href="#team">White paper</a></li>
                             <li class="menu__item"><a href="#game">Tokenomics</a></li>
                             <li class="menu__item"><a href="#roadmap">Road Map</a></li>
-                            <li class="menu__item"><a href="#">How to buy</a></li>
+                            <li class="menu__item"><a href="#faq">How to buy</a></li>
                             <li class="menu__item"><a href="#explore">Buy</a></li>
                         </ul>
                     </nav>
@@ -613,9 +613,9 @@
                             <div class="virtual__img">
                                 <picture>
                                     <source srcset="img/virtual-atrs.webp" type="webp" />
-                                     <img src="img/virtual-atrs.png" loading="lazy">
+                                    <img src="img/virtual-atrs.png" loading="lazy">
                                 </picture>
-                               
+
 
                             </div>
                             <div class="virtual__blur"></div>
@@ -685,7 +685,7 @@
                                         <source srcset="img/stan.webp" type="webp" />
                                         <img src="img/stan.png" alt="stan" loading="lazy">
                                     </picture>
-                                    
+
 
                                 </div>
                                 <div class="member__info">
@@ -842,7 +842,7 @@
                     </p>
                 </div>
             </div>
-            <section class="faq">
+            <section class="faq" id="faq">
                 <div class="faq__blurs blurs">
                     <div class="blurs__first"></div>
                     <div class="blurs__second"></div>
@@ -976,7 +976,24 @@
             </section>
         </div>
         <footer class="footer">
-
+            <div class="footer__blur">
+                <picture>
+                    <source srcset="img/footer.webp" type="webp" />
+                    <img src="img/footer.png" alt="footer" loading="lazy">
+                </picture>
+            </div>
+            <div class="footer__base">
+                <img src="img/global.svg" alt="planet" loading="lazy">
+                <p class="footer__info">
+                    Based in US<br>
+                    Active worldwide
+                </p>
+            </div>
+            <div class="footer__contacts">
+                <a href="#" class="contact">CONTACT</a>
+                <a href="#" class="contact">CONTACT</a>
+            </div>
+            <div class="footer__clean"></div>
         </footer>
     </div>
 
