--- a/index.html
+++ b/index.html
@@ -434,6 +434,8 @@
                         <p>VR GAME MARKETPLACE</p>
                         <p>VR GAME MARKETPLACE</p>
                         <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
+                        <p>VR GAME MARKETPLACE</p>
                     </div>
                     <div class="tickers__first_bg">
                         <img src="img/line-1.svg" alt="bg">
@@ -441,6 +443,34 @@
                 </div>
                 <div class="tickers__second">
                     <div class="tickers__content">
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                            viewBox="0 0 55 56" fill="none">
+                            <path
+                                d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                fill="white" />
+                        </svg>
+                    </p>
+                    <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                        viewBox="0 0 55 56" fill="none">
+                        <path
+                            d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                            fill="white" />
+                    </svg>
+                </p>
+                        <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
+                                viewBox="0 0 55 56" fill="none">
+                                <path
+                                    d="M22.544 5.40518L29.6488 24.115L49.649 23.3864L30.9391 30.4912L31.6678 50.4913L24.563 31.7815L4.56283 32.5101L23.2727 25.4053L22.544 5.40518Z"
+                                    fill="white" />
+                            </svg>
+                        </p>
                         <p>CRAFTY METAVERSE <svg xmlns="http://www.w3.org/2000/svg" width="55" height="56"
                                 viewBox="0 0 55 56" fill="none">
                                 <path
@@ -609,15 +639,13 @@
                                 </picture>
                             </div>
                         </div>
+                        <div class="virtual__img">
+                            <picture>
+                                <source srcset="img/virtual-atrs.webp" type="webp" />
+                                <img src="img/virtual-atrs.png" loading="lazy">
+                            </picture>
+                        </div>
                         <div class="virtual">
-                            <div class="virtual__img">
-                                <picture>
-                                    <source srcset="img/virtual-atrs.webp" type="webp" />
-                                    <img src="img/virtual-atrs.png" loading="lazy">
-                                </picture>
-
-
-                            </div>
                             <div class="virtual__blur"></div>
                             <div class="virtual__content">
                                 <div class="virtual__text">
@@ -848,69 +876,85 @@
                     <div class="blurs__second"></div>
                 </div>
                 <div class="container">
-                    <div class="faq__border">
-                        <div class="faq__content">
-                            <div class="faq__head">
-                                <h3 class="faq___subtitle subtitle">
-                                    Questions
-                                </h3>
-                                <h2 class="faq__title title">
-                                    faq
-                                </h2>
-                            </div>
-                            <div class="faq__info">
-                                <div class="faq__question active">
-                                    <div class="question">
-                                        <p>1. What is CMETA and which tokens we use? </p>
+                    <div class="fqa__wrapper">
+                        <div class="faq__border">
+                            <div class="fqa__container">
+                                <div class="faq__content">
+                                    <div class="faq__head">
+                                        <h3 class="faq___subtitle subtitle">
+                                            Questions
+                                        </h3>
+                                        <h2 class="faq__title title">
+                                            faq
+                                        </h2>
                                     </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
-                                    </div>
-                                </div>
-                                <div class="faq__question">
-                                    <div class="question">
-                                        <p>2. What is CMETA and which tokens we use? </p>
-                                    </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
-                                    </div>
-                                </div>
-                                <div class="faq__question">
-                                    <div class="question">
-                                        <p>3. What is CMETA and which tokens we use? </p>
-                                    </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
-                                    </div>
-                                </div>
-                                <div class="faq__question">
-                                    <div class="question">
-                                        <p>4. What is CMETA and which tokens we use? </p>
-                                    </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
-                                    </div>
-                                </div>
-                                <div class="faq__question">
-                                    <div class="question">
-                                        <p>5. What is CMETA and which tokens we use? </p>
-                                    </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
-                                    </div>
-                                </div>
-                                <div class="faq__question">
-                                    <div class="question">
-                                        <p>6. What is CMETA and which tokens we use? </p>
-                                    </div>
-                                    <div class="answer">Crafty Metaverse is a blockchain-based virtual reality metaverse
-                                        platform focused on building a decentralized, persistent online 3D/VR
-                                        environment that will allow interactions among humans in the form of Avatars.
+                                    <div class="faq__info">
+                                        <div class="faq__question active">
+                                            <div class="question">
+                                                <p>1. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
+                                        <div class="faq__question">
+                                            <div class="question">
+                                                <p>2. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
+                                        <div class="faq__question">
+                                            <div class="question">
+                                                <p>3. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
+                                        <div class="faq__question">
+                                            <div class="question">
+                                                <p>4. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
+                                        <div class="faq__question">
+                                            <div class="question">
+                                                <p>5. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
+                                        <div class="faq__question">
+                                            <div class="question">
+                                                <p>6. What is CMETA and which tokens we use? </p>
+                                            </div>
+                                            <div class="answer">Crafty Metaverse is a blockchain-based virtual reality
+                                                metaverse
+                                                platform focused on building a decentralized, persistent online 3D/VR
+                                                environment that will allow interactions among humans in the form of
+                                                Avatars.
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
